--- a/scripts/conf/ntopng/ntopng.conf
+++ b/scripts/conf/ntopng/ntopng.conf
@@ -3,38 +3,42 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 09/08/2020
-# Data de atualização: 01/01/2021
-# Versão: 0.1
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 16/12/2021
+# Data de atualização: 16/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do NTop-NG v5.0.x
 
-# Configuração padrão do NTop-NG, configurações avançadas eu recomendo você ler os
-# manuais de configuração e customização do NTop-NG no site Oficial.
+# Configuração padrão do NTop-NG, configurações avançadas eu recomendo você 
+# ler os manuais de configuração e customização do NTop-NG no site Oficial.
 #
-#Configuração do caminho do PID (ID do processo) do NTop-NG
+# Configuração do caminho do PID (ID do processo) do NTop-NG
 -pid-path=/var/tmp/ntopng.pid
 #
-#Parâmetro para tornar o NTop-NG como um Daemon do Sistema (usando o Systemctl)
+# Parâmetro para tornar o NTop-NG como um Daemon do Sistema (usando o Systemctl)
 --daemon
 #
-#Configuração da Interface de Rede ou Coletor de Dados
+# Configuração da Interface de Rede ou Coletor de Dados
 --interface=enp0s3
 #
-#Configuração da Porta HTTP do servidor da web incorporado do NTop-NG
+# Configuração da Porta HTTP do servidor da web incorporado do NTop-NG
 --http-port=3001
 #
-#Configuração dos Endereços IPv4 e Máscaras de Rede para cada Interface ativa, separadas por , "vírgula"
+# Configuração dos Endereços IPv4 e Máscaras de Rede para cada Interface ativa, 
+# separadas por , "vírgula"
 --local-networks=172.16.1.0/24
 #
-#Define o modo de resolução do endereço DNS (0=resolve IPs locais, 1=resolve IP Locais e Globais, 2=não resolve IP, 3=não decodifica e nem resolve)
+# Define o modo de resolução do endereço DNS (0=resolve IPs locais, 1=resolve IP 
+# Locais e Globais, 2=não resolve IP, 3=não decodifica e nem resolve)
 --dns-mode=1
 #
-#Especifica o diretório de dados (deve ser gravável).
+# Especifica o diretório de dados (deve ser gravável).
 --data-dir=/var/tmp/ntopng
 #
-#Desative o logout da interface da web por inatividade.
+# Desative o logout da interface da web por inatividade.
 --disable-autologout
 #
-#Inicia o NTop-NG no modo de License Community
+# Inicia o NTop-NG no modo de License Community
 --community
