--- a/scripts/conf/dhcp/dhcpd.conf
+++ b/scripts/conf/dhcp/dhcpd.conf
@@ -9,10 +9,11 @@
 # Data de atualização: 14/12/2021
 # Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do ISC DHCP Server v4.4.x
 
 # Configuração do Servidor Autoritativo do ISC DHCP Server da rede
 authoritative;
-
+#
 # Configurações Globais do ISC DHCP Server de todos os escopos da rede
 use-host-decl-names on;
 one-lease-per-client on;
