--- a/scripts/conf/dns/named.conf
+++ b/scripts/conf/dns/named.conf
@@ -9,6 +9,7 @@
 // Data de atualização: 10/12/2021
 // Versão: 0.03
 // Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+// Testado e homologado para a versão do Bind9 DNS Server v9.16.x
 
 // Configuração padrão do arquivo named.conf do Bind9 DNS Server
 // Esse arquivo apenas informa a localização dos principais arquivos de 
