--- a/scripts/conf/dhcp/dhcpd.conf
+++ b/scripts/conf/dhcp/dhcpd.conf
@@ -10,6 +10,8 @@
 # Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do ISC DHCP Server v4.4.x
+# Testado e homologado para a versão do Bind DNS Sever v9.16.x
+# Testado e homologado para a versão do TFTP-HPA v5.2.x
 
 # Configuração do Servidor Autoritativo do ISC DHCP Server da rede
 authoritative;
