--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -9,6 +9,7 @@
 ; Data de atualização: 15/10/2021
 ; Versão: 0.02
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+; Testado e homologado para a versão do PHP v7.4.x
 
 ; Configurações customizadas para os serviços do: ownCloud, ZoneMinder
 
