--- a/scripts/conf/lamp/ports.conf
+++ b/scripts/conf/lamp/ports.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 20/10/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+#Testado e homologado para a versão do Apache2 v2.4.x
 
 # Configurações do Apache2 para suportar somente endereços IPv4
 
