--- a/scripts/conf/lamp/pti-intra.conf
+++ b/scripts/conf/lamp/pti-intra.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 18/10/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OpenSSL v1.1.x e Apache2 v2.4.x
+# Testado e homologado para a versão do Apache2 v2.4.x
 
 #Configuração do Virtual Host do Site pti.intra na porta 80
 <VirtualHost *:80>
