--- a/scripts/conf/ntp/ntp.conf
+++ b/scripts/conf/ntp/ntp.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 10/12/2021
 # Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do NTP Server v4.2.
 
 # Mais informações sobre as configurações do ntp.conf acesse os sites:
 # Site1: http://ntp.br/guia-linux-avancado.php
