--- a/scripts/conf/ntp/timesyncd.conf
+++ b/scripts/conf/ntp/timesyncd.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 17/10/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do NTP Server v4.2.
 #
 # Configuração global dos Servidores NTP que serão utilizados para sincronizar
 # a data e hora do servidor local Ubuntu Server
