--- a/scripts/conf/lamp/apache2.conf
+++ b/scripts/conf/lamp/apache2.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 05/11/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache2 v2.4.x
 
 # Configurações Globais do Apache2
 
