--- a/scripts/conf/ftp/vsftpd-ssl.conf
+++ b/scripts/conf/ftp/vsftpd-ssl.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 10/12/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OpenSSL 1.1.x e VSFTPD v3.0.x
+# Testado e homologado para a versão do OpenSSL v1.1.x e VSFTPD v3.0.x
 
 # Bloco de configuração do pedido de certificado PKCS#10 e comando de geração de certificado.
 [ req ]
