--- a/scripts/conf/lamp/default-ssl.conf
+++ b/scripts/conf/lamp/default-ssl.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 21/11/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Apache2 v2.4.x
+# Testado e homologado para a versão do Apache2 v2.4.x e OpenSSL v1.1.x
 
 #Configuração do Módulo de SSL do Apache2
 <IfModule mod_ssl.c>
