--- a/scripts/conf/wordpress/wordpress.conf
+++ b/scripts/conf/wordpress/wordpress.conf
@@ -9,7 +9,8 @@
 # Data de atualização: 14/12/2021
 # Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Apache2 v2.4.x e Wordpress v5.8.x
+# Testado e homologado para a versão do Apache2 v2.4.x
+# Testado e homologado para a versão do Wordpress v5.8.x
 
 #Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
 <VirtualHost *:80>
