--- a/scripts/conf/loganalyzer/loganalyzer.conf
+++ b/scripts/conf/loganalyzer/loganalyzer.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 09/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
 
 #Configuração do Virtual Host do LogAnalyzer no Apache2 na porta padrão 80
