--- a/scripts/conf/loganalyzer/mysql.conf
+++ b/scripts/conf/loganalyzer/mysql.conf
@@ -9,6 +9,7 @@
 # Data de atualização: 02/11/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Rsyslog v8.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
 
 # Configurações Globais do recurso de armazenamento de Log no MySQL
