--- a/scripts/conf/netdata/mysql.conf
+++ b/scripts/conf/netdata/mysql.conf
@@ -16,12 +16,14 @@ mycnf1:
   name     : 'local'
   'my.cnf' : '/etc/mysql/mysql.conf/mysqld.cnf'
 
+# Alterar a senha do usuário do Root do MySQL para o seu cenário
 socket1:
   name     : 'local'
   user     : 'root'
   pass     : 'pti@2018'
   socket   : '/var/run/mysqld/mysqld.sock'
 
+# Alterar a senha do usuário do Root do MySQL para o seu cenário
 tcp:
   name     : 'local'
   user     : 'root'
