--- a/scripts/conf/netdata/tomcat.conf
+++ b/scripts/conf/netdata/tomcat.conf
@@ -13,18 +13,22 @@
 #
 
 # Configuração do Job de monitoramento do Apache Tomcat9
+
+# Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localhost:
   name : 'local'
   url  : 'http://localhost:8080/manager/status?XML=true'
   user : 'admin'
   pass : 'vaamonde'
 
+# Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv4:
   name : 'local'
   url  : 'http://127.0.0.1:8080/manager/status?XML=true'
   user : 'admin'
   pass : 'vaamonde'
 
+# Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv6:
   name : 'local'
   url  : 'http://[::1]:8080/manager/status?XML=true'
