--- a/scripts/conf/glpi/glpi.conf
+++ b/scripts/conf/glpi/glpi.conf
@@ -9,6 +9,8 @@
 # Data de atualização: 30/11/2021
 # Versão: 0.13
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Apache2 v2.4.x 
+# Testado e homologado para a versão do GLPI Help Desk v9.5.x
 #
 # Configuração da permissão do diretório raiz do GLPI Help Desk no Apache2
 <Directory /var/www/html/glpi>
