--- a/scripts/conf/glpi/glpi1.conf
+++ b/scripts/conf/glpi/glpi1.conf
@@ -9,7 +9,8 @@
 # Data de atualização: 14/12/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Apache2 v2.4.x e GLPI Help Desk v9.5.x
+# Testado e homologado para a versão do Apache2 v2.4.x 
+# Testado e homologado para a versão do GLPI Help Desk v9.5.x
 
 #Configuração do Virtual Host do GLPI Help Desk no Apache2 na porta padrão 80
 <VirtualHost *:80>
