--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -9,7 +9,9 @@
 # Data de atualização: 02/12/2021
 # Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do FusionInventory Server 9.5.x, Agent 2.6.x e GLPI 9.5.x
+# Testado e homologado para a versão do FusionInventory Server v9.5.x
+# Testado e homologado para a versão do FusionInventory Agent v2.6.x
+# Testado e homologado para a versão do GLPI Help Desk v9.5.x
 
 #Endereço do Servidor do FusionInventory do GLPI Help Desk
 server = http://localhost/glpi/plugins/fusioninventory/
