--- a/scripts/conf/ubuntu/nsswitch.conf
+++ b/scripts/conf/ubuntu/nsswitch.conf
@@ -12,6 +12,7 @@
 #
 # Configuração do acesso a informações de usuários, grupos e senhas.
 # Padrão consultar primeiro os arquivos (files) depois o sistema (systemd)
+#DATABASE       SERVICE
 passwd:         files systemd
 group:          files systemd
 shadow:         files
@@ -19,11 +20,13 @@ gshadow:        files
 
 # Configuração da forma de resolução de nomes de computadores.
 # Padrão consultar primeiro os arquivos (files) depois o serviço de DNS
+#DATABASE       SERVICE
 hosts:          files dns
 networks:       files
 
 # Configuração da consultada dos serviços de rede
 # Padrão consultar primeiro o banco de dados local (db) depois os arquivos (files)
+#DATABASE       SERVICE
 protocols:      db files
 services:       db files
 ethers:         db files
@@ -31,4 +34,5 @@ rpc:            db files
 
 # Configuração da consulta de resolução do serviço de Grupos de Rede
 # Padrão consultar primeiro os serviço de rede NIS (Network Information Service)
+#DATABASE       SERVICE
 netgroup:       nis
