--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -13,74 +13,77 @@
 # Testado e homologado para a versão do FusionInventory Agent v2.6.x
 # Testado e homologado para a versão do GLPI Help Desk v9.5.x
 
-#Endereço do Servidor do FusionInventory do GLPI Help Desk
+# Endereço do Servidor do FusionInventory do GLPI Help Desk
+# OBSERVAÇÃO IMPORTANTE: no servidor Ubuntu Server utilizar o endereço
+# de Loopback (localhost), no agentes remotos mudar para o endereço de
+# rede: 172.16.1.20 ou CNAME: glpi.pti.intra
 server = http://localhost/glpi/plugins/fusioninventory/
 
-#Diretório temporário utilizado pelo inventário
+# Diretório temporário utilizado pelo inventário
 local = /tmp
 
-#Atraso máximo antes do primeiro inventário, configuração em segundos
+# Atraso máximo antes do primeiro inventário, configuração em segundos
 delaytime = 3600
 
-#Não entre em contato com o servidor antes da próxima hora agendada
+# Não entre em contato com o servidor antes da próxima hora agendada
 lazy = 0
 
-#Permitir a verificação de diretórios domésticos de usuários
+# Permitir a verificação de diretórios domésticos de usuários
 scan-homedirs = 0
 
-#Permitir a verificação de perfis de usuários
+# Permitir a verificação de perfis de usuários
 scan-profiles = 0
 
-#Salvar inventario como HTML
+# Salvar inventario como HTML
 html = 0
 
-#Tempo limite para a execução dos módulos de inventário
+# Tempo limite para a execução dos módulos de inventário
 backend-collect-timeout = 180
 
-#Sempre enviar dados do inventário para o servidor
+# Sempre enviar dados do inventário para o servidor
 force = 0
 
-#Não use peer-to-peer para baixar arquivos
+# Não use peer-to-peer para baixar arquivos
 no-p2p = 0
 
-#Diretório dos Certificado CA
+# Diretório dos Certificado CA
 ca-cert-dir = 
 
-#Arquivo de Certificado CA
+# Arquivo de Certificado CA
 ca-cert-file = 
 
-#Não verifique o certificado SSL do servidor
+# Não verifique o certificado SSL do servidor
 no-ssl-check = 0
 
-#Tempo máximo de conenxão com o servidor
+# Tempo máximo de conenxão com o servidor
 timeout = 180
 
-#Desativar o servidor web incorporado
+# Desativar o servidor web incorporado
 no-httpd = 0
 
-#Interface de rede para ouvir
+# Interface de rede para ouvir
 httpd-ip =
 
-#Configuração da Porta de comunicação do FusionInventory do GLPI
+# Configuração da Porta de comunicação do FusionInventory do GLPI
 httpd-port = 62354
 
-#Configuração da sada de erro
+# Configuração da sada de erro
 logger = stderr
 
-#Arquivo de Log do inventário
+# Arquivo de Log do inventário
 logfile = /var/log/fusioninventory-agent/fusioninventory.log
 
-#Tamanho máximo do Log em MB
+# Tamanho máximo do Log em MB
 logfile-maxsize = 5
 
-#Utilizar o Syslog
+# Utilizar o Syslog
 logfacility = LOG_USER
 
-#Usar o console colorido
+# Usar o console colorido
 color = 1
 
-#Adicionar a TAG para o resultado do inventário
+# Adicionar a TAG para o resultado do inventário
 tag = Server
 
-#Modo de Debug
+# Modo de Debug
 debug = 0
