--- a/scripts/conf/ansible/rundeck-config.properties
+++ b/scripts/conf/ansible/rundeck-config.properties
@@ -9,12 +9,13 @@
 # Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
 # Kernel >= 4.15.x
 
-# Configuração do endereço IPv4 e Porta de Conexão do Servidor Ubuntu que está rodando o Rundeck,
-# por padrão as configurações do Rundeck só responde para o endereço de Loopback
+# Configuração do endereço IPv4 e Porta de Conexão do Servidor Ubuntu que está 
+# rodando o Rundeck, por padrão as configurações do Rundeck só responde para o 
+# endereço de Loopback
 grails.serverURL=http://172.16.1.20:4440
 
-# Configuração padrão do Rundeck, recomendo não alterar os valores, somente se você leu o manual
-# de customização e configuração avançada do Rundeck.
+# Configuração padrão do Rundeck, recomendado não alterar os valores abaixo, 
+# somente se você leu o manual de customização e configuração avançada do Rundeck.
 loglevel.default=INFO
 rdeck.base=/var/lib/rundeck
 rss.enabled=false
