--- a/scripts/conf/zabbix/zabbix_server.conf
+++ b/scripts/conf/zabbix/zabbix_server.conf
@@ -9,31 +9,31 @@
 # Data de atualização: 11/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Zabbix Server e Agent V5.5.x 
+# Testado e homologado para a versão do Zabbix Server e Agent v5.4.x 
 
 # Configuração padrão do Zabbix Server, configurações avançadas eu recomendo você ler os
 # manuais de configuração e customização do Zabbix Server no site Oficial.
 #
-#Variável do nome do Banco de Dados do Zabbix
+# Variável do nome do Banco de Dados do Zabbix
 DBName=zabbix
 #
-#Variável do nome do Usuário do Banco de Dados do Zabbix
+# Variável do nome do Usuário do Banco de Dados do Zabbix
 DBUser=zabbix
 #
-#Variável da Senha do Usuário do Banco de Dados do Zabbix
+# Variável da Senha do Usuário do Banco de Dados do Zabbix
 DBPassword=zabbix
 #
-#Variáveis da Configuração do Log do Zabbix
+# Variáveis da Configuração do Log do Zabbix
 LogFile=/var/log/zabbix/zabbix_server.log
 SNMPTrapperFile=/var/log/snmptrap/snmptrap.log
 LogFileSize=0
 LogSlowQueries=3000
 #
-#Variáveis do Processo do Zabbix
+# Variáveis do Processo do Zabbix
 PidFile=/run/zabbix/zabbix_server.pid
 SocketDir=/run/zabbix
 #
-#Variáveis padrão do Zabbix, alterar somente se necessário
+# Variáveis padrão do Zabbix, alterar somente se necessário
 Timeout=4
 AlertScriptsPath=/usr/lib/zabbix/alertscripts
 ExternalScripts=/usr/lib/zabbix/externalscripts
