--- a/scripts/conf/owncloud/owncloud.conf
+++ b/scripts/conf/owncloud/owncloud.conf
@@ -10,6 +10,7 @@
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
+# Testado e homologado para a versão do MySQL v8.0.x 
 # Testado e homologado para a versão do ownCloud v10.8.x
 
 #Configuração do Virtual Host do ownCloud no Apache2 na porta padrão 80
@@ -29,24 +30,24 @@
 	DocumentRoot /var/www/html/own/
 
 	# Configuração das permissões do diretório raiz do ownCloud
-	<Directory /var/www/html/glpi>
+	<Directory /var/www/html/own>
 		Options FollowSymLinks
 		AllowOverride All
 		Order allow,deny
 		allow from all
 	</Directory>
 
-	# Configuração dos módulos de segurança de acesso ao ownCloud
-	<IfModule mod_rewrite.c>
-		RewriteEngine On
-		RewriteRule ^index\.php$ - [L]
-		RewriteCond $1 ^(index\.php)?$ [OR]
-		RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-		RewriteCond %{REQUEST_FILENAME} -f [OR]
-		RewriteCond %{REQUEST_FILENAME} -d
-		RewriteRule ^(.*)$ - [S=1]
-		RewriteRule . /index.php [L]
-	</IfModule>
+	# Configuração dos módulos de segurança de acesso ao ownCloud (desativado)
+	#<IfModule mod_rewrite.c>
+	#	RewriteEngine On
+	#	RewriteRule ^index\.php$ - [L]
+	#	RewriteCond $1 ^(index\.php)?$ [OR]
+	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
+	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
+	#	RewriteCond %{REQUEST_FILENAME} -d
+	#	RewriteRule ^(.*)$ - [S=1]
+	#	RewriteRule . /index.php [L]
+	#</IfModule>
 
  	# Configuração dos arquivos de Log do ownCloud
 	ErrorLog ${APACHE_LOG_DIR}/error-owncloud.log
