--- a/scripts/conf/ocsinventory/ocsinventory-agent.cfg
+++ b/scripts/conf/ocsinventory/ocsinventory-agent.cfg
@@ -3,48 +3,49 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/05/2021
-# Data de atualização: 07/05/2021
-# Versão: 0.03
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-# Testado e homologado para a versão do OCS Inventory Server 2.9, Agent 2.8.1
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 25/11/2021
+# Data de atualização: 19/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
 
-#Endereço do Servidor do OCS Inventory Server
-#Alterar o endereço para https://ocs.pti.intra/ocsinventory depois que o servidor estiver 
-#configurado com o Certificado SSL, utilizar o nome FQDN que foi configurado no DNS
+# Endereço do Servidor do OCS Inventory Server
+# Alterar o endereço para https://ocs.pti.intra/ocsinventory depois que o servidor estiver 
+# configurado com o Certificado SSL, utilizar o nome FQDN que foi configurado no DNS
 server=http://localhost/ocsinventory
 
-#Ativar ou Desativar o recurso de SSL
-#Habilitar somente quando o servidor estiver configurado com o Certificado SSL, alterar para 1
+# Ativar ou Desativar o recurso de SSL
+# Habilitar somente quando o servidor estiver configurado com o Certificado SSL, alterar para 1
 ssl=0
 
-#Nome do Certificado para conexão https e suporte ao SSL do Agent do OCS Inventory
-#Habilitar somente quando o servidor estiver configurado com o Certificado SSL do Apache2
+# Nome do Certificado para conexão https e suporte ao SSL do Agent do OCS Inventory
+# Habilitar somente quando o servidor estiver configurado com o Certificado SSL do Apache2
 #ca=/etc/ocsinventory-agent/ocs.crt
 
-#Localização do Binário do OCS Inventory Agent
+# Localização do Binário do OCS Inventory Agent
 basevardir=/var/lib/ocsinventory-agent
 
-#Tag (etiqueta) do equipamento
+# Tag (etiqueta) do equipamento
 tag=Server
 
-#Habilitar o recurso de Debug nível 1 (detalhado)
+# Habilitar o recurso de Debug nível 1 (detalhado)
 debug=1
 
-#Localização dos logs do OCS Inventory Agent
+# Localização dos logs do OCS Inventory Agent
 logfile=/var/log/ocsinventory-agent/ocsagent.log
 
-#Configuração do escaneamento do diretório Home dos Usuários
+# Configuração do escaneamento do diretório Home dos Usuários
 scan-homedirs=1
 
-#Configuração do escaneamento do SNMP da rede local
+# Configuração do escaneamento do SNMP da rede local
 snmptimeout=3
 snmpretry=2
 snmp=1
 
-#Configuração do usuário e senha de autenticação do Site OCS Inventory Reports
-#Habilitar somente quando for criado o usuário e senha nas configurações do Apache2 .htpasswd
-#user=ocsagent
-#password=SENHA_CRIPTOGRAFADA_HTPASSWD
-#realm=BoraParaPratica
+# Configuração do usuário e senha de autenticação do Site OCS Inventory Reports
+# Habilitar somente quando for criado o usuário e senha nas configurações do Apache2 .htpasswd
+# user=ocsagent
+# password=SENHA_CRIPTOGRAFADA_HTPASSWD
+# realm=BoraParaPratica
