--- a/scripts/conf/ocsinventory/ocsinventory-reports.conf
+++ b/scripts/conf/ocsinventory/ocsinventory-reports.conf
@@ -3,12 +3,13 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/05/2021
-# Data de atualização: 07/05/2021
-# Versão: 0.03
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-# Testado e homologado para a versão do OCS Inventory Server 2.9, Agent 2.8.1
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 25/11/2021
+# Data de atualização: 19/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
 
 Alias /ocsreports /usr/share/ocsinventory-reports/ocsreports
 
