--- a/scripts/conf/ocsinventory/zz-ocsinventory-restapi.conf
+++ b/scripts/conf/ocsinventory/zz-ocsinventory-restapi.conf
@@ -3,12 +3,13 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/05/2021
-# Data de atualização: 07/05/2021
-# Versão: 0.03
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-# Testado e homologado para a versão do OCS Inventory Server 2.9, Agent 2.8.1
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 25/11/2021
+# Data de atualização: 19/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
 #
 # Novo arquivo de configuração do OCS Inventory utilizado nas versões >= 2.5
 
@@ -18,16 +19,22 @@ PerlOptions +Parent
   # Localização do binário e versão do Perl
   $ENV{MOJO_HOME} = '/usr/local/share/perl/5.26.1';
   $ENV{MOJO_MODE} = 'deployment';
+  #
   # Configuração do Banco de Dados Master (Primário)
   $ENV{OCS_DB_HOST} = 'localhost';
+  #
   # Configuração da Porta de Conexão com o MySQL
   $ENV{OCS_DB_PORT} = '3306';
+  #
   # Nome do Banco de Dados do MySQL
   $ENV{OCS_DB_LOCAL} = 'ocsweb';
+  #
   # Nome do usuário de autenticação com o Banco de Dados
   $ENV{OCS_DB_USER} = 'ocs';
+  #
   # Senha do usuário de autenticação com o Banco de Dados
   $ENV{OCS_DB_PWD} = 'pti@2018';
+  #
   # Configuração do suporte ao SSL com o Banco de Dados
   $ENV{OCS_DB_SSL_ENABLED} = 0;
 #  $ENV{OCS_DB_SSL_CLIENT_KEY} = '';
