--- a/scripts/conf/ocsinventory/ocsinventory-agent.cfg
+++ b/scripts/conf/ocsinventory/ocsinventory-agent.cfg
@@ -9,7 +9,7 @@
 # Data de atualização: 19/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent v2.9.x
 
 # Endereço do Servidor do OCS Inventory Server
 # Alterar o endereço para https://ocs.pti.intra/ocsinventory depois que o servidor estiver 
