--- a/scripts/conf/ocsinventory/z-ocsinventory-server.conf
+++ b/scripts/conf/ocsinventory/z-ocsinventory-server.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 19/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent v2.9.x
 
 # Configuração do bloco principal de conexão com o banco de dados
 <IfModule mod_perl.c>
@@ -28,10 +28,10 @@
   PerlSetEnv OCS_DB_LOCAL ocsweb
 
   # Nome do usuário de autenticação com o Banco de Dados
-  PerlSetEnv OCS_DB_USER ocs
+  PerlSetEnv OCS_DB_USER ocsweb
 
   # Senha do usuário de autenticação com o Banco de Dados
-  PerlSetVar OCS_DB_PWD pti@2018
+  PerlSetVar OCS_DB_PWD ocsweb
 
   # Configuração do SSL para a conexão no Banco de Dados
   PerlSetEnv OCS_DB_SSL_ENABLED 0
