--- a/scripts/conf/ocsinventory/zz-ocsinventory-restapi.conf
+++ b/scripts/conf/ocsinventory/zz-ocsinventory-restapi.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 19/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent v2.9.x
 #
 # Novo arquivo de configuração do OCS Inventory utilizado nas versões >= 2.5
 
@@ -30,10 +30,10 @@ PerlOptions +Parent
   $ENV{OCS_DB_LOCAL} = 'ocsweb';
   #
   # Nome do usuário de autenticação com o Banco de Dados
-  $ENV{OCS_DB_USER} = 'ocs';
+  $ENV{OCS_DB_USER} = 'ocsweb';
   #
   # Senha do usuário de autenticação com o Banco de Dados
-  $ENV{OCS_DB_PWD} = 'pti@2018';
+  $ENV{OCS_DB_PWD} = 'ocsweb';
   #
   # Configuração do suporte ao SSL com o Banco de Dados
   $ENV{OCS_DB_SSL_ENABLED} = 0;
