--- a/scripts/conf/ocsinventory/ocsinventory-reports.conf
+++ b/scripts/conf/ocsinventory/ocsinventory-reports.conf
@@ -9,10 +9,12 @@
 # Data de atualização: 19/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent 2.9.x
+# Testado e homologado para a versão do OCS Inventory Server v2.9.x e Agent v2.9.x
 
+# Configurações do Alias (Apelido) do OCS Inventory Server e Reports
 Alias /ocsreports /usr/share/ocsinventory-reports/ocsreports
 
+# Configuração da Localização do Diretório do OCS Inventory Server e Reports
 <Directory /usr/share/ocsinventory-reports/ocsreports>
       <IfModule mod_authz_core.c>
         Require all granted
@@ -55,7 +57,7 @@ Alias /ocsreports /usr/share/ocsinventory-reports/ocsreports
 
 </Directory>
 
-# Configuração da área de donwload e distribuição de software
+# Configuração da Área de Donwload e Distribuição de Software
 <Directory /var/lib/ocsinventory-reports/download>
    <IfModule mod_authz_core.c>
      Require all granted
@@ -68,7 +70,7 @@ Alias /ocsreports /usr/share/ocsinventory-reports/ocsreports
 Alias /download /var/lib/ocsinventory-reports/download
 
 
-# Configuração da Comunidade para a Área do de Descoberta do SNMP
+# Configuração da Comunidade para a Área de Descoberta do SNMP
 <Directory /var/lib/ocsinventory-reports/snmp>
    <IfModule mod_authz_core.c>
      Require all granted
