--- a/scripts/conf/graylog/elasticsearch.yml
+++ b/scripts/conf/graylog/elasticsearch.yml
@@ -1,14 +1,17 @@
-#!/bin/bash
 # Autor: Robson Vaamonde
 # Site: www.procedimentosemti.com.br
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 03/08/2020
-# Data de atualização: 04/08/2020
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 21/12/2021
+# Data de atualização: 21/12/2021
 # Versão: 0.1
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Graylog v4.2
+# Testado e homologado para a versão do MongoDB v4.4.x
+# Testado e homologado para a versão do ElasticSearch v6.0.x
 
 # Configuração da variável do nome do cluster utilizado no serviço do Graylog
 cluster.name: graylog
