--- a/scripts/conf/graylog/server.conf
+++ b/scripts/conf/graylog/server.conf
@@ -3,12 +3,15 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 26/07/2020
-# Data de atualização: 26/07/2020
-# Versão: 0.01
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-# Testado e homologado para a versão do Graylog 3.3.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 21/12/2021
+# Data de atualização: 21/12/2021
+# Versão: 0.1
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Graylog v4.2
+# Testado e homologado para a versão do MongoDB v4.4.x
+# Testado e homologado para a versão do ElasticSearch v6.0.x
 
 # Configuração da Interface de Rede e Porta de acesso ao Graylog, configuração padrão:
 # 127.0.0.1:9000 ou localhost:9000 (porta alterada para: 19000 para não entrar em conflito
