--- a/scripts/conf/netdata/bind_rndc.conf
+++ b/scripts/conf/netdata/bind_rndc.conf
@@ -13,5 +13,5 @@
 
 # Configuração do Job das Estatísticas do Bind9 DNS Sever
  job_name:
-     name: dnspti
+     name: local
      named_stats_path: '/var/log/named/named.stats'
