--- a/scripts/conf/netdata/isc_dhcpd.conf
+++ b/scripts/conf/netdata/isc_dhcpd.conf
@@ -13,7 +13,7 @@
 
 # Configuração do Job dos Leases do ISC DHCP Server
 job_name:
-     name: dhcppti
+     name: local
      leases_path: '/var/lib/dhcp/dhcpd.leases'
      pools:
        office:         '172.16.1.0/24'
