--- a/scripts/conf/postgresql/postgresql.conf
+++ b/scripts/conf/postgresql/postgresql.conf
@@ -1,70 +1,51 @@
-# -----------------------------
-# PostgreSQL configuration file
-# -----------------------------
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 23/12/2021
+# Data de atualização: 23/12/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do PostgreSQL v14.x
+# Testado e homologado para a versão do PgAdmin v6.x
 #
-# This file consists of lines of the form:
+# Configuração padrão do Banco de Dados PostgreSQL Server (linhas comentadas deixar o padrão)
 #
-#   name = value
+# Localização da Base de Dados do PostgreSQL
+data_directory = '/var/lib/postgresql/14/main'
 #
-# (The "=" is optional.)  Whitespace may be used.  Comments are introduced with
-# "#" anywhere on a line.  The complete list of parameter names and allowed
-# values can be found in the PostgreSQL documentation.
+# Localização do arquivo de Autenticação Baseada em Host do PostgreSQL
+hba_file = '/etc/postgresql/14/main/pg_hba.conf'
 #
-# The commented-out settings shown in this file represent the default values.
-# Re-commenting a setting is NOT sufficient to revert it to the default value;
-# you need to reload the server.
+# Localização do arquivo de IDENT do PostgreSQL
+ident_file = '/etc/postgresql/14/main/pg_ident.conf'
 #
-# This file is read on server startup and when the server receives a SIGHUP
-# signal.  If you edit the file on a running system, you have to SIGHUP the
-# server for the changes to take effect, run "pg_ctl reload", or execute
-# "SELECT pg_reload_conf()".  Some parameters, which are marked below,
-# require a server shutdown and restart to take effect.
+# Localização do arquivo de PID do Processo do PostgreSQL
+external_pid_file = '/var/run/postgresql/14-main.pid'
 #
-# Any parameter can also be given as a command-line option to the server, e.g.,
-# "postgres -c log_connections=on".  Some parameters can be changed at run time
-# with the "SET" SQL command.
+# Permitindo o PostgreSQL escutar em qualquer endereço IP do servidor e liberando o
+# acesso remoto (padrão é liberar somente o endereço de Loopback)
+listen_addresses = '*'
 #
-# Memory units:  B  = bytes            Time units:  us  = microseconds
-#                kB = kilobytes                     ms  = milliseconds
-#                MB = megabytes                     s   = seconds
-#                GB = gigabytes                     min = minutes
-#                TB = terabytes                     h   = hours
-#                                                   d   = days
-
-
-#------------------------------------------------------------------------------
-# FILE LOCATIONS
-#------------------------------------------------------------------------------
-
-# The default values of these variables are driven from the -D command-line
-# option or PGDATA environment variable, represented here as ConfigDir.
-
-data_directory = '/var/lib/postgresql/14/main'		# use data in another directory
-					# (change requires restart)
-hba_file = '/etc/postgresql/14/main/pg_hba.conf'	# host-based authentication file
-					# (change requires restart)
-ident_file = '/etc/postgresql/14/main/pg_ident.conf'	# ident configuration file
-					# (change requires restart)
-
-# If external_pid_file is not explicitly set, no extra PID file is written.
-external_pid_file = '/var/run/postgresql/14-main.pid'			# write an extra PID file
-					# (change requires restart)
-
-
-#------------------------------------------------------------------------------
-# CONNECTIONS AND AUTHENTICATION
-#------------------------------------------------------------------------------
-
-# - Connection Settings -
-
-#listen_addresses = 'localhost'		# what IP address(es) to listen on;
-					# comma-separated list of addresses;
-					# defaults to 'localhost'; use '*' for all
-					# (change requires restart)
-port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+# Configuração da Porta de Conexão padrão do PostgreSQL
+port = 5432
+#
+# Número máximo de conexões simultâneas no PostgreSQL
+max_connections = 100
+#
+# Localização do diretório de Socket do PostgreSQL
+unix_socket_directories = '/var/run/postgresql'
+#
+# ========================================================================================
+# BLOCO DE CONFIGURAÇÃO PADRÃO, NÃO ALTERAR OS VALORES, SOMENTE SE VOCÊ LEU O ARQUIVO MAN
+# DO POSTGRESQL E FOR CUSTOMIZAR PARA ALTO DESEMPENHO OU ALTA DISPONIBILIDADE
+# ========================================================================================
+#
 #superuser_reserved_connections = 3	# (change requires restart)
-unix_socket_directories = '/var/run/postgresql'	# comma-separated list of directories
+
 					# (change requires restart)
 #unix_socket_group = ''			# (change requires restart)
 #unix_socket_permissions = 0777		# begin with 0 to use octal notation
