--- a/scripts/conf/postgresql/pg_hba.conf
+++ b/scripts/conf/postgresql/pg_hba.conf
@@ -27,14 +27,14 @@ local    all             postgres                                peer
 local    all             all                                     peer
 #
 # Conexões locais IPv4: liberação padrão somente para o Loopback (linha comentada)
-# Liberando o acesso remoto ao Banco de Dados PostgreSQL, alterado o método para MD5
+# Liberando o acesso remoto ao Banco de Dados PostgreSQL
 #host    all             all             127.0.0.1/32            scram-sha-256
-host     all             all             0.0.0.0/0                md5
+host     all             all             0.0.0.0/0               scram-sha-256
 #
 # Conexões locais IPv6: liberação padrão somente para o Loopback (linha comentada)
-# Liberando o acesso remoto ao Banco de Dados PostgreSQL, alterado o método para MD5
+# Liberando o acesso remoto ao Banco de Dados PostgreSQL
 #host    all             all             ::1/128                 scram-sha-256
-host     all             all             ::/0                    md5
+host     all             all             ::/0                    scram-sha-256
 #
 # Permitir conexões de replicação de localhost, por um usuário com privilégio de replicação.
 local    replication     all                                     peer
