--- a/scripts/conf/nfs/idmapd.conf
+++ b/scripts/conf/nfs/idmapd.conf
@@ -1,11 +1,33 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 08/01/2022
+# Data de atualização: 08/01/2022
+# Versão: 0.1
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do NFS Server v4.x
+
+# Configurações gerais do Serviço de Rede NFS Server
 [General]
-
+#
+# Configuração do modo de Verbosidade do Serviço de Rede NFS Server 
 Verbosity = 0
+#
+# Configuração do diretório de RPC (Remote Procedure Call) do Serviço de Rede NFS Server
 Pipefs-Directory = /run/rpc_pipefs
-# set your own domain here, if it differs from FQDN minus hostname
-# Domain = localdomain
-
+#
+# Configuração do Nome de Domínio FQDN (Fully Qualified Domain Name) do Serviço de Rede NFS Server
+Domain = pti.intra
+#
+# Configurações de mapeamento do Serviço de Rede NFS Server
 [Mapping]
-
+#
+# Configuração do mapeamento do Usuário Nobody (Ninguém/Convidado)
 Nobody-User = nobody
+#
+# Configuração do mapeamento do Grupo Nobody (Ninguém/Convidado)
 Nobody-Group = nogroup
