--- a/scripts/conf/webdav/webdav.conf
+++ b/scripts/conf/webdav/webdav.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 08/01/2022
-# Data de atualização: 08/01/2022
-# Versão: 0.01
+# Data de atualização: 09/01/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 
@@ -27,7 +27,7 @@ DavLockDB /var/run/apache2/webdav/DavLock
 		ServerAdmin webmaster@pti.intra
 		
 		#Pasta raiz da hospedagem dos arquivos do Webdav
-		DocumentRoot /var/www/html/webdav
+		DocumentRoot /var/www/webdav
 
 		#Configuração dos arquivos de Log do Webdav
 		ErrorLog ${APACHE_LOG_DIR}/error-webdav.log
@@ -41,8 +41,8 @@ DavLockDB /var/run/apache2/webdav/DavLock
 		SSLCertificateChainFile /etc/ssl/certs/ca-pticrt.pem
 
 		#Configuração do Alias da Pasta do Webdav para montar os compartilhamentos remotos
-		Alias /webdav /var/www/html/webdav
-		<Directory /var/www/html/webdav>
+		Alias /webdav /var/www/webdav
+		<Directory /var/www/webdav>
 			DAV On
 			AuthType Digest
 			AuthName "webdav"
