--- a/scripts/conf/lamp/000-default.conf
+++ b/scripts/conf/lamp/000-default.conf
@@ -24,5 +24,14 @@
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	
+	# Configuração do diretório do Wordpress (descomentar as linhas abaixo somente
+	# se você não estiver usando o Virtual Host do Wordpress)
+	#<Directory /var/www/html/wp>
+	#	Options Indexes FollowSymLinks MultiViews
+	#	AllowOverride All
+	#	Order allow,deny
+	#	allow from all
+	#</Directory>
+
 </VirtualHost>
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
