--- a/scripts/conf/wordpress/wordpress.conf
+++ b/scripts/conf/wordpress/wordpress.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 14/12/2021
-# Versão: 0.03
+# Data de atualização: 11/01/2022
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do Wordpress v5.8.x
@@ -30,14 +30,13 @@
 
 	# Configuração das permissões do diretório raiz do Wordpress
 	<Directory /var/www/html/wp>
-		Options FollowSymLinks
-		AllowOverride None
+		Options Indexes FollowSymLinks MultiViews
+		AllowOverride All
 		Order allow,deny
 		allow from all
 	</Directory>
 
 	# Configuração dos módulos de segurança de acesso ao Wordpress
-	# Descomentar essas linhas após a configuração do Wordpress
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
 		RewriteRule ^index\.php$ - [L]
