--- a/scripts/conf/asterisk/sip.conf
+++ b/scripts/conf/asterisk/sip.conf
@@ -1,14 +1,17 @@
-;Autor: Robson Vaamonde
-;Site: www.procedimentosemti.com.br
-;Facebook: facebook.com/ProcedimentosEmTI
-;Facebook: facebook.com/BoraParaPratica
-;YouTube: youtube.com/BoraParaPratica
-;Data de criação: 20/01/2019
-;Data de atualização: 21/01/2019
-;Versão: 0.01
-;Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-;Testado e homologado para a versão do Asterisk 16.1.1
-;Exemplo sip.conf: https://github.com/asterisk/asterisk/blob/master/configs/samples/sip.conf.sample
+; Autor: Robson Vaamonde
+; Site: www.procedimentosemti.com.br
+; Facebook: facebook.com/ProcedimentosEmTI
+; Facebook: facebook.com/BoraParaPratica
+; YouTube: youtube.com/BoraParaPratica
+; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+; Data de criação: 14/01/2022
+; Data de atualização: 14/01/2022
+; Versão: 0.01
+; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+; Testado e homologado para a versão do Asterisk v19.1.x
+;
+; Exemplo sip.conf: https://github.com/asterisk/asterisk/blob/master/configs/samples/sip.conf.sample
 
 ;==================================== INÍCIO DA SESSÃO GERAL ====================================
 ;Configuração da Seção Geral padrão para todos os Ramais
