--- a/scripts/conf/asterisk/asterisk.conf
+++ b/scripts/conf/asterisk/asterisk.conf
@@ -12,15 +12,12 @@
 ; Testado e homologado para a versão do Asterisk v19.1.x
 
 [options]
-; If we want to start Asterisk with a default verbosity for the verbose
-; or debug logger channel types, then we use these settings (by default
-; they are disabled).
+
+; Usuário e Grupo do serviço do Asterisk
+runuser = asterisk
+rungroup = asterisk
+
+; Configurações padrão do Asterisk, só descomentar se for necessário
 ;verbose = 5
 ;debug = 2
-
-; User and group to run asterisk as. NOTE: This will require changes to
-; directory and device permissions.
-runuser = asterisk		; The user to run as. The default is root.
-rungroup = asterisk		; The group to run as. The default is root
-
 ;defaultlanguage = es
