--- a/scripts/conf/asterisk/modules.conf
+++ b/scripts/conf/asterisk/modules.conf
@@ -11,15 +11,12 @@
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do Asterisk v19.1.x
 
+; Configuração dos módulos de serviço do Asterisk
+
 [modules]
 autoload = no
 
-; This is a minimal module load. We are loading only the modules
-; required for the Asterisk features used in the "Super Awesome
-; Company" configuration.
-
-; Applications
-
+; Applications (Aplicações)
 load = app_bridgewait.so
 load = app_dial.so
 load = app_playback.so
@@ -30,8 +27,7 @@ load = app_directory.so
 load = app_confbridge.so
 load = app_queue.so
 
-; Bridging
-
+; Bridging (Ponte)
 load = bridge_builtin_features.so
 load = bridge_builtin_interval_features.so
 load = bridge_holding.so
@@ -39,31 +35,26 @@ load = bridge_native_rtp.so
 load = bridge_simple.so
 load = bridge_softmix.so
 
-; Call Detail Records
-
+; Call Detail Records (Registros e detalhes de chamadas )
 load = cdr_custom.so
 
-; Channel Drivers
-
+; Channel Drivers (Drivers de canal )
 load = chan_bridge_media.so
 load = chan_pjsip.so
 
 ; Codecs
-
 load = codec_gsm.so
 load = codec_resample.so
 load = codec_ulaw.so
 load = codec_g722.so
 
-; Formats
-
+; Formats (Formatos)
 load = format_gsm.so
 load = format_pcm.so
 load = format_wav_gsm.so
 load = format_wav.so
 
-; Functions
-
+; Functions (Funções)
 load = func_callerid.so
 load = func_cdr.so
 load = func_pjsip_endpoint.so
@@ -71,12 +62,10 @@ load = func_sorcery.so
 load = func_devstate.so
 load = func_strings.so
 
-; Core/PBX
-
+; Core/PBX (Núcleo do PABX)
 load = pbx_config.so
 
-; Resources
-
+; Resources (Recursos)
 load = res_http_websocket.so
 load = res_musiconhold.so
 load = res_pjproject.so
@@ -124,9 +113,7 @@ load = res_sorcery_memory.so
 load = res_sorcery_realtime.so
 load = res_timing_timerfd.so
 
-; Do not load res_hep and kin unless you are using HEP monitoring
-; <http://sipcapture.org> in your network.
-
+; Do not load (Não carregue )
 noload = res_hep.so
 noload = res_hep_pjsip.so
 noload = res_hep_rtcp.so
