--- a/scripts/conf/ubuntu/config.conf
+++ b/scripts/conf/ubuntu/config.conf
@@ -1,9 +1,19 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 10/10/2021
+# Data de atualização: 17/01/2022
+# Versão: 0.18
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Neofetch v7.0.x
+
 print_info() {
     info title
     info underline
-
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
@@ -21,7 +31,7 @@ print_info() {
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
-    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "GPU Driver" gpu_driver
     info "CPU Usage" cpu_usage
     info "Disk" disk
     #info "Battery" battery
@@ -31,8 +41,7 @@ print_info() {
     info "Local IP" local_ip
     info "Public IP" public_ip
     info "Users" users
-    info "Locale" locale  # This only works on glibc systems.
-
+    info "Locale" locale
     info cols
 }
 
