--- a/scripts/conf/dhcp/dhcpd.conf
+++ b/scripts/conf/dhcp/dhcpd.conf
@@ -6,23 +6,36 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 14/12/2021
-# Versão: 0.06
+# Data de atualização: 18/01/2022
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do ISC DHCP Server v4.4.x
 # Testado e homologado para a versão do Bind DNS Sever v9.16.x
 # Testado e homologado para a versão do TFTP-HPA v5.2.x
-
+#
 # Configuração do Servidor Autoritativo do ISC DHCP Server da rede
 authoritative;
 #
 # Configurações Globais do ISC DHCP Server de todos os escopos da rede
 use-host-decl-names on;
-one-lease-per-client on;
 allow unknown-clients;
 ignore client-updates;
 update-optimization off;
 update-conflict-detection off;
+#
+# Permitir que cada cliente tenha exatamente uma concessão e expire concessões 
+# antigas se ocorrer um novo DHCPDISCOVER
+one-lease-per-client on;
+#
+# Diga ao servidor para procurar o nome do host cliente no DNS Server (se estiver
+# configurado corretamente, caso contrário comente esse linha).
+get-lease-hostnames on;
+#
+# Faça ping no endereço IP que está sendo oferecido para ter certeza de que não é
+# configurado em outro host. 
+# OBSERVAÇÃO: Isso tem algumas repercussões potenciais para clientes que não gostam 
+# de atrasos na configuração do endereço IP.
+ping-check on;
 #
 # Configuração do tempo de aluguel dos Endereços IPv4 (minutos) do ISC DHCP Server
 default-lease-time 14400;
