--- a/scripts/conf/netdata/tomcat.conf
+++ b/scripts/conf/netdata/tomcat.conf
@@ -11,26 +11,25 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdata v1.32.x
 #
-
 # Configuração do Job de monitoramento do Apache Tomcat9
-
+#
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localhost:
   name : 'local'
   url  : 'http://localhost:8080/manager/status?XML=true'
   user : 'admin'
-  pass : 'vaamonde'
-
+  pass : 'pti@2018'
+#
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv4:
   name : 'local'
   url  : 'http://127.0.0.1:8080/manager/status?XML=true'
   user : 'admin'
-  pass : 'vaamonde'
-
+  pass : 'pti@2018'
+#
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv6:
   name : 'local'
   url  : 'http://[::1]:8080/manager/status?XML=true'
   user : 'admin'
-  pass : 'vaamonde'
+  pass : 'pti@2018'
